rewrote rfid reading code. its now rather reliable and ready to go.

--- a/client/makefile
+++ b/client/makefile
@@ -6,7 +6,7 @@ reader.o: reader.c reader.h
 
 
 client: client.c client.h list.o reader.o
-	gcc -g -Wall client.c list.o reader.o -o client -lftdi
+	gcc -g -Wall client.c list.o reader.o -o client -lftdi -lpthread
 
 
 clean:
