basic mDNS added to client

--- a/client/makefile
+++ b/client/makefile
@@ -6,7 +6,8 @@ reader.o: reader.c reader.h
 
 
 client: client.c client.h list.o reader.o
-	gcc -g -Wall client.c list.o reader.o -o client -lftdi -lpthread
+	gcc -g -Wall client.c list.o reader.o -o client \
+          -lftdi -lpthread -lcurl -lavahi-client
 
 
 clean:
