client working. now just needs a bit of cleanup/refactoring/commenting

--- a/client/makefile
+++ b/client/makefile
@@ -1,6 +1,8 @@
-all: client
+all: client avahi-publish
+
 
 list.o: list.h list.c
+
 
 reader.o: reader.c reader.h
 
@@ -10,8 +12,12 @@ client: client.c client.h list.o reader.o
           -lftdi -lpthread -lcurl -lavahi-client
 
 
+avahi-publish: avahi-publish.c
+	gcc -g -Wall avahi-publish.c -lavahi-client -o avahi-publish
+
+
 clean:
-	rm -rf *~ client *.o
+	rm -rf *~ client *.o avahi-publish
 
 
 
