--- a/client/makefile
+++ b/client/makefile
@@ -7,11 +7,18 @@ list.o: list.h list.c
 reader.o: reader.c reader.h
 
 
+config.o: config.c config.h
+
+
 client: client.c rfid_reader_handler.c avahi_dns_handler.c \
-         client.h list.o reader.o
+         client.h list.o reader.o config.o
 	gcc -g -Wall client.c rfid_reader_handler.c \
-                 avahi_dns_handler.c list.o reader.o -o client \
+                 avahi_dns_handler.c list.o reader.o config.o -o client \
                  -lftdi -lpthread -lcurl -lavahi-client
+
+
+test: test.c config.o list.o
+	gcc -g -Wall test.c config.o list.o -o test
 
 
 avahi-publish: avahi-publish.c
