DOES NOT COMPILE. BUILD IS BROKEN!
added string_utils files.
began parsing config of servers.

--- a/client/makefile
+++ b/client/makefile
@@ -4,6 +4,9 @@ all: client avahi-publish
 list.o: list.h list.c
 
 
+string_utils.o: list.o string_utils.c string_utils.h
+
+
 reader.o: reader.c reader.h
 
 
@@ -11,9 +14,10 @@ config.o: config.c config.h
 
 
 client: client.c rfid_reader_handler.c avahi_dns_handler.c \
-         client.h list.o reader.o config.o
+         client.h list.o reader.o config.o string_utils.o
 	gcc -g -Wall client.c rfid_reader_handler.c \
-                 avahi_dns_handler.c list.o reader.o config.o -o client \
+                 avahi_dns_handler.c list.o reader.o config.o \
+		 string_utils.o -o client \
                  -lftdi -lpthread -lcurl -lavahi-client
 
 
